--- a/src/mesa/drivers/dri/i965/Makefile.sources
+++ b/src/mesa/drivers/dri/i965/Makefile.sources
@@ -78,6 +78,7 @@ i965_FILES = \
 	brw_state_cache.c \
 	brw_state_dump.c \
 	brw_state_upload.c \
+	brw_surface_formats.c \
 	brw_tex.c \
 	brw_tex_layout.c \
 	brw_urb.c \
