draw/gallivm: export overflow arithmetic to its own file
We'll be reusing this code so lets put it in a common file
and use it in the draw module.

Signed-off-by: Zack Rusin <zackr@vmware.com>

--- a/src/gallium/auxiliary/Makefile.sources
+++ b/src/gallium/auxiliary/Makefile.sources
@@ -163,6 +163,7 @@ GENERATED_SOURCES := \
 
 GALLIVM_SOURCES := \
         gallivm/lp_bld_arit.c \
+        gallivm/lp_bld_arit_overflow.c \
         gallivm/lp_bld_assert.c \
         gallivm/lp_bld_bitarit.c \
         gallivm/lp_bld_const.c \
