--- a/src/mesa/drivers/osmesa/Makefile.am
+++ b/src/mesa/drivers/osmesa/Makefile.am
@@ -39,11 +39,11 @@ lib@OSMESA_LIB@_la_SOURCES = osmesa.c
 
 lib@OSMESA_LIB@_la_LDFLAGS = -module -version-number @OSMESA_VERSION@ -no-undefined
 
-if HAVE_SHARED_GLAPI
-GLAPI_LIB = $(top_builddir)/src/mapi/shared-glapi/libglapi.la
-else
 GLAPI_LIB = $(top_builddir)/src/mapi/glapi/libglapi.la
+if HAVE_SHARED_GLAPI
+GLAPI_LIB += $(top_builddir)/src/mapi/shared-glapi/libglapi.la
 endif
+
 lib@OSMESA_LIB@_la_LIBADD = \
 	$(top_builddir)/src/mesa/libmesa.la \
 	$(GLAPI_LIB) \
