--- a/src/gallium/targets/libgl-xlib/SConscript
+++ b/src/gallium/targets/libgl-xlib/SConscript
@@ -45,6 +45,9 @@ if env['llvm']:
     env.Append(CPPDEFINES = ['GALLIUM_LLVMPIPE'])
     env.Prepend(LIBS = [llvmpipe])
 
+# Disallow undefined symbols
+env.Append(SHLINKFLAGS = ['-Wl,-z,defs'])
+
 # libGL.so.1.5
 libgl_1_5 = env.SharedLibrary(
     target ='GL',
