--- a/src/mesa/drivers/x11/SConscript
+++ b/src/mesa/drivers/x11/SConscript
@@ -31,6 +31,9 @@ sources = [
 	'xm_tri.c',
 ]
 
+# Disallow undefined symbols
+env.Append(SHLINKFLAGS = ['-Wl,-z,defs'])
+
 # libGL.so.1.6
 libgl_1_6 = env.SharedLibrary(
     target ='GL',
