scons: Don't use -z defs ld option on Mac.
Should fix fdo bug 67098.

--- a/src/mesa/drivers/x11/SConscript
+++ b/src/mesa/drivers/x11/SConscript
@@ -32,7 +32,8 @@ sources = [
 ]
 
 # Disallow undefined symbols
-env.Append(SHLINKFLAGS = ['-Wl,-z,defs'])
+if env['platform'] != 'darwin':
+    env.Append(SHLINKFLAGS = ['-Wl,-z,defs'])
 
 # libGL.so.1.6
 libgl_1_6 = env.SharedLibrary(
