--- a/src/gallium/targets/libgl-xlib/SConscript
+++ b/src/gallium/targets/libgl-xlib/SConscript
@@ -46,7 +46,8 @@ if env['llvm']:
     env.Prepend(LIBS = [llvmpipe])
 
 # Disallow undefined symbols
-env.Append(SHLINKFLAGS = ['-Wl,-z,defs'])
+if env['platform'] != 'darwin':
+    env.Append(SHLINKFLAGS = ['-Wl,-z,defs'])
 
 # libGL.so.1.5
 libgl_1_5 = env.SharedLibrary(
