--- a/src/gallium/auxiliary/Makefile.sources
+++ b/src/gallium/auxiliary/Makefile.sources
@@ -13,6 +13,7 @@ C_SOURCES := \
 	draw/draw_pipe_clip.c \
 	draw/draw_pipe_cull.c \
 	draw/draw_pipe_flatshade.c \
+        draw/draw_pipe_ia.c \
 	draw/draw_pipe_offset.c \
 	draw/draw_pipe_pstipple.c \
 	draw/draw_pipe_stipple.c \
@@ -23,7 +24,6 @@ C_SOURCES := \
 	draw/draw_pipe_vbuf.c \
 	draw/draw_pipe_wide_line.c \
 	draw/draw_pipe_wide_point.c \
-	draw/draw_prim_assembler.c \
 	draw/draw_pt.c \
 	draw/draw_pt_emit.c \
 	draw/draw_pt_fetch.c \
