draw: add back separate input assembler
the issue is that stream output is run before the pipeline, which
means that unless we decompose the primitives before the so
then things crash. we could convert the entire stream output
code into a pipeline stage but it will take a bit, so for now
fix the crashes by simply re-adding the old input assembler
which is run before the SO.

Signed-off-by: Zack Rusin <zackr@vmware.com>

--- a/src/gallium/auxiliary/Makefile.sources
+++ b/src/gallium/auxiliary/Makefile.sources
@@ -24,6 +24,7 @@ C_SOURCES := \
 	draw/draw_pipe_vbuf.c \
 	draw/draw_pipe_wide_line.c \
 	draw/draw_pipe_wide_point.c \
+	draw/draw_prim_assembler.c \
 	draw/draw_pt.c \
 	draw/draw_pt_emit.c \
 	draw/draw_pt_fetch.c \
