--- a/src/mesa/Makefile.sources
+++ b/src/mesa/Makefile.sources
@@ -650,6 +650,7 @@ INCLUDE_DIRS = \
 	-I$(top_srcdir)/include \
 	-I$(top_builddir)/src \
 	-I$(top_srcdir)/src \
+	-I$(top_builddir)/src/compiler/glsl \
 	-I$(top_builddir)/src/compiler/nir \
 	-I$(top_builddir)/src/mesa \
 	-I$(top_srcdir)/src/mesa \
