glsl: Pull operator_strs out to its own file
No change except to the copyright symbol.  The next patch will generate
this file with Python, and Unicode + Python = pure rage.

v2: Massive rebase.

Signed-off-by: Ian Romanick <ian.d.romanick@intel.com>
Reviewed-by: Matt Turner <mattst88@gmail.com>

--- a/src/compiler/Makefile.sources
+++ b/src/compiler/Makefile.sources
@@ -39,6 +39,7 @@ LIBGLSL_FILES = \
 	glsl/ir_equals.cpp \
 	glsl/ir_expression_flattening.cpp \
 	glsl/ir_expression_flattening.h \
+	glsl/ir_expression_operation_strings.h \
 	glsl/ir_function_can_inline.cpp \
 	glsl/ir_function_detect_recursion.cpp \
 	glsl/ir_function_inlining.h \
