--- a/src/compiler/glsl/.gitignore
+++ b/src/compiler/glsl/.gitignore
@@ -4,6 +4,7 @@ glsl_parser.h
 glsl_parser.output
 glsl_test
 ir_expression_operation.h
+ir_expression_operation_strings.h
 subtest-cr/
 subtest-lf/
 subtest-cr-lf/
