clover/llvm: Move a bunch of utility functions into separate file.
Some of these will be useful from a different compilation unit in the
same subtree so put them in a publicly accessible header file.

Reviewed-by: Serge Martin <edb+mesa@sigluy.net>
Tested-by: Jan Vesely <jan.vesely@rutgers.edu>

--- a/src/gallium/state_trackers/clover/Makefile.sources
+++ b/src/gallium/state_trackers/clover/Makefile.sources
@@ -55,7 +55,8 @@ CPP_SOURCES := \
 
 LLVM_SOURCES := \
 	llvm/compat.hpp \
-	llvm/invocation.cpp
+	llvm/invocation.cpp \
+	llvm/util.hpp
 
 TGSI_SOURCES := \
 	tgsi/compiler.cpp
