--- a/src/gallium/state_trackers/clover/Makefile.sources
+++ b/src/gallium/state_trackers/clover/Makefile.sources
@@ -56,6 +56,7 @@ CPP_SOURCES := \
 LLVM_SOURCES := \
 	llvm/compat.hpp \
 	llvm/invocation.cpp \
+	llvm/metadata.hpp \
 	llvm/util.hpp
 
 TGSI_SOURCES := \
