clover/llvm: Split compilation and linking.
Split the work previously done by compile_program_llvm() into
compile_program() (which simply runs the front-end and serializes the
resulting LLVM IR) and link_program() (which takes care of everything
else down to binary codegen).

[ Serge Martin: allow LLVM IR dump after compilation ]

Reviewed-by: Serge Martin <edb+mesa@sigluy.net>
Tested-by: Jan Vesely <jan.vesely@rutgers.edu>

--- a/src/gallium/state_trackers/clover/Makefile.sources
+++ b/src/gallium/state_trackers/clover/Makefile.sources
@@ -60,6 +60,7 @@ LLVM_SOURCES := \
 	llvm/codegen.hpp \
 	llvm/compat.hpp \
 	llvm/invocation.cpp \
+	llvm/invocation.hpp \
 	llvm/metadata.hpp \
 	llvm/util.hpp
 
