mesa: add scaffolding for OES/EXT_primitive_bounding_box
Signed-off-by: Ilia Mirkin <imirkin@alum.mit.edu>
Reviewed-by: Ian Romanick <ian.d.romanick@intel.com>

--- a/src/mesa/Makefile.sources
+++ b/src/mesa/Makefile.sources
@@ -26,6 +26,8 @@ MAIN_FILES = \
 	main/attrib.h \
 	main/barrier.c \
 	main/barrier.h \
+	main/bbox.c \
+	main/bbox.h \
 	main/blend.c \
 	main/blend.h \
 	main/blit.c \
