--- a/src/gallium/state_trackers/clover/Makefile.sources
+++ b/src/gallium/state_trackers/clover/Makefile.sources
@@ -56,6 +56,7 @@ CPP_SOURCES := \
 LLVM_SOURCES := \
 	llvm/codegen/bitcode.cpp \
 	llvm/codegen/common.cpp \
+	llvm/codegen/native.cpp \
 	llvm/codegen.hpp \
 	llvm/compat.hpp \
 	llvm/invocation.cpp \
