glsl: Make the generated sources build rules more like NIR
Signed-off-by: Ian Romanick <ian.d.romanick@intel.com>
Reviewed-by: Matt Turner <mattst88@gmail.com>

--- a/src/compiler/Makefile.glsl.am
+++ b/src/compiler/Makefile.glsl.am
@@ -116,9 +116,7 @@ glsl_libglsl_la_LIBADD = \
 	glsl/libglcpp.la
 
 glsl_libglsl_la_SOURCES =				\
-	glsl/glsl_lexer.cpp				\
-	glsl/glsl_parser.cpp				\
-	glsl/glsl_parser.h				\
+	$(LIBGLSL_GENERATED_FILES)			\
 	$(LIBGLSL_FILES)
 
 
