swr: [rasterizer core] introduce simd16intrin.h
Refactoring to leave existing simd_* intrinsics in "simdintrin.h" unchanged,
adding corresponding simd16_* intrinsics in "simd16intrin.h" on the side,
with emulation, that we can use piecemeal, rather than the all-or-nothing
approach to bring up avx512.

Signed-off-by: Tim Rowley <timothy.o.rowley@intel.com>

--- a/src/gallium/drivers/swr/Makefile.sources
+++ b/src/gallium/drivers/swr/Makefile.sources
@@ -54,6 +54,7 @@ COMMON_CXX_SOURCES := \
 	rasterizer/common/rdtsc_buckets.h \
 	rasterizer/common/rdtsc_buckets_shared.h \
 	rasterizer/common/rdtsc_buckets_shared.h \
+	rasterizer/common/simd16intrin.h \
 	rasterizer/common/simdintrin.h \
 	rasterizer/common/swr_assert.cpp \
 	rasterizer/common/swr_assert.h
