--- a/src/gallium/auxiliary/Makefile.sources
+++ b/src/gallium/auxiliary/Makefile.sources
@@ -175,6 +175,7 @@ C_SOURCES := \
 	translate/translate_generic.c \
 	translate/translate_sse.c \
 	util/dbghelp.h \
+	util/u_bitcast.h \
 	util/u_bitmask.c \
 	util/u_bitmask.h \
 	util/u_blend.h \
